--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+
+        "files" : ["app/Helpers/helper.php"]
     },
     "autoload-dev": {
         "psr-4": {
